delete old data

--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -11,202 +11,7 @@
 {% block feedback %}
 {% endblock %}
 {% block content %}
-    <div id="fb-root"></div>
-    <script>(function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) {return;}
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=165186856899090";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
-    <div id="main_holder" class="clearfix">
-
-        	<div id="content">
-
-            <div id="about">
-                <div id="bubble_corner"><!--bubble corner--></div>
-                <h2>Welcome to the next level of fun and social networking.</h2><h4>But wait, there's <a href="#">more</a></h4>
-            	<div id="about_text"><b>Outclan is a check-in based game, available for multiple platforms.
-                    Checkin to different venues, earn money and experience.
-                    Using those, you can become stronger, by buying some territory, upgrading yourself, and, most importantly, founding a clan.
-                    Aquire new territory for your clan, by attacking rival venues, lowering their clan loyalty.
-                    Conquer rival clans, or merge with them, climbing the ranks towards the position of master clan.
-                    We are OutClan. Which clan are YOU?
-                </b></div>
-            </div>
-
-            <div id="animations_map">
-
-            </div>
-            
-            <div id="tour">
-                <div id="tour_info"><h2>Still having doubts?</h2> <a href="#" id="tour-a">Take the tour <img src="{{ STATIC_URL }}img/tour/route.png" alt="route" /></a></div>
-
-                    <div id="tour_icons">
-
-                        <div id="phone"></div>
-                        <div id="compass"></div>
-                        <div id="coin"></div>
-                        <div id="checkin"></div>
-                        <div id="dollar"></div>
-
-                    </div>
-    
-                </div>
-                        </div>
-
-            <div id="connect">
-
-                <div id="drop1">
-
-                	<div id="login">
-                    <button class="connect_button" id="login_button">login</button>
-
-                    </div>
-
-                	<div id="login_register">
-
-                    	<ul id="login_form">
-
-                        	<form action="{% url account.views.login %}" method="POST" id="login-form">{% csrf_token %}
-                                    <div id="general" class="error"></div>
-
-                                    <li><label for="username" class="label">username:</label></li>
-                                    <li><input type="text" id="username" name="username" class="input"/></li>
-                                    <li><label for="password" class="label">password:</label></li>
-                                    <li><input type="password" id="password" name="password" class="input" /></li>
-                                    <li><a id="reset-a">Reset password</a></li>
-                                    <li><input type="submit" value="login" class="submit" /></li>
-
-                            </form>
-                            <li><div id="or"></div></li>
-                            <li><button id="facebook_button" onclick="window.location='/facebook/login'">login via Facebook</button></li>
-                            <li><button id="google_button" onclick="window.location='/google/login'">login via Google</button></li>
-
-
-                        </ul>
-
-                        <div id="register_hide">
-
-                            <p>not a player yet?<br/>
-        don't miss out on the fun</p>
-
-                            <button class="connect_button" id="sign_up_button">sign up</button>
-
-                            <p>it's free and easy</p>
-
-                        </div>
-
-                    </div>
-
-               	 </div>
-                
-                <div class="sep1_a"></div>
-
-                <div id="sign_up_dropdown">
-
-
-                <div id="sep2"></div>
-                <div id="drop3">
-
-                 <p id="hard_way">the hard way</p>
-                 <p id="quicknpainless">it's quick and painless, we promise</p>
-
-                 <form action="{% url account.views.register %}" id="sign_up_form" method="POST">
-                    {% csrf_token %}
-                    <div id="general" class="error"></div>
-                     
-                    <ul>
-
-                        <li><label for="username" class="label">username</label></li>
-                        <li><input type="text" id="username" name="username" class="input" /></li>
-                        <li><label for="email" class="label">email</label></li>
-                        <li><input type="text" id="email" name="email" class="input" /></li>
-                        <li><label for="password" class="label">password</label></li>
-                        <li><input type="password" id="password" name="password" class="input" /></li>
-                        <li><label for="re_password" class="label">re-type password</label></li>
-                        <li><input type="password" id="re_password" name="re_password" class="input" /></li>
-                        <li><label for="location" class="label">location</label></li>
-                        <li><input type="text" id="location" name="location" class="input" /></li>
-                        <li><input type="submit" value="sign me up!!" class="submit" /></li>
-
-                    </ul>
-
-                </form>
-
-                </div>
-
-                <div id="sep3"></div>
-
-                </div>
-
-            </div>
-
-            <div id="mobile_app_downloads">
-
-            	<ul id="mobile_app_downloads_list">
-                	<li>
-
-                    <h2>no <b>checkins</b>, no <b>fun</b>...</h2>
-                    <h3>get yourself the mobile app</h3>
-
-                    </li>
-                    <li><a href="{{ STATIC_URL }}android/outclan.apk"><img src="{{ STATIC_URL }}img/mobile_app/android.png" alt="Outclan Android Application Download" /></a></li>
-                    <li>
-                        <div class="fb-like" data-href="http://www.facebook.com/pages/Outclancom/170262259722670" data-send="true" data-layout="button_count" data-width="450" data-show-faces="true"></div>
-                    </li>
-                </ul>
-
-
-            </div>
-
-        </div>
-    <div id="reset-password" style="display:none">
-        <form action="{% url common.views.reset_password_instance %}" method="POST" id="reset-form">{% csrf_token %}
-            <label for="email-reset">Email</label>
-            <input type="email" name="email" id="email-reset" class="input"/><br>
-            <button id="send-reset" class="submit">Submit</button>
-            <input type="reset" name="reset" class="submit" value="Reset">
-        </form>
-    </div>
-    <div id="tour-flash" style="display:none">
-        <div id="flashContent">
-            <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="550" height="400" align="middle">
-                <param name="movie" value="tour.swf" />
-                <param name="quality" value="high" />
-                <param name="bgcolor" value="#ffffff" />
-                <param name="play" value="true" />
-                <param name="loop" value="true" />
-                <param name="wmode" value="window" />
-                <param name="scale" value="showall" />
-                <param name="menu" value="true" />
-                <param name="devicefont" value="false" />
-                <param name="salign" value="" />
-                <param name="allowScriptAccess" value="sameDomain" />
-                <!--[if !IE]>-->
-                <object type="application/x-shockwave-flash" data="{{ STATIC_URL }}flash/tournobtn.swf" width="550" height="400">
-                    <param name="movie" value="tour.swf" />
-                    <param name="quality" value="high" />
-                    <param name="bgcolor" value="#ffffff" />
-                    <param name="play" value="true" />
-                    <param name="loop" value="true" />
-                    <param name="wmode" value="window" />
-                    <param name="scale" value="showall" />
-                    <param name="menu" value="true" />
-                    <param name="devicefont" value="false" />
-                    <param name="salign" value="" />
-                    <param name="allowScriptAccess" value="sameDomain" />
-                <!--<![endif]-->
-                    <a href="http://www.adobe.com/go/getflash">
-                        <img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player" />
-                    </a>
-                <!--[if !IE]>-->
-                </object>
-                <!--<![endif]-->
-            </object>
-        </div>
-
-    </div>
+    asd
 {% endblock %}
 
 
