--- a/common/templates/base.html
+++ b/common/templates/base.html
@@ -1,35 +1,56 @@
-{% block html_declare %}
-    <html>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Griddly</title>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-{#    <script src="{{ STATIC_URL }}login.js"></script>#}
+    <title>AISEC</title>
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/bootstrap.css"/>
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/bootstrap-responsive.css"/>
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css"/>
+
+    {#    <script src="{{ STATIC_URL }}login.js"></script>#}
     {% block extrahead %}
     {% endblock %}
 </head>
 
 <body>
-    <div id="login">
-        {% if not user.is_authenticated %}
-            <form action="{% url django.contrib.auth.views.login %}" id="login-form" method="POST">
-                {% csrf_token %}
-                <label>Username</label>
-                <input type="text" name="username" id="email" class="input"><br>
-                <label>Password</label>
-                <input type="password" name="password" id="password" class="input"><br>
-                <button class="button">Login</button>
-            </form>
-        {% else %}
-            Welcome, {{ user.first_name }} {{ user.last_name }}
-            <a href="{% url django.contrib.auth.views.logout_then_login %}">[logout]</a>
-        {% endif %}
+    <div class="navbar navbar-fixed-top">
+        <div class="navbar-inner">
+            <div class="container">
+                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </a>
+                <a class="brand" href="#">AISEC</a>
+                <div class="nav-collapse collapse">
+                    <ul class="nav">
+                        <li class="active"><a href="{% url discussion_index %}">Discussions</a></li>
+                        <li><a href="#about">Users</a></li>
+                    </ul>
+                </div><!--/.nav-collapse -->
+            </div>
+        </div>
     </div>
-    <div id="register">
-    </div>
-    <div id="content">
+
+    <div class="container">
+
         {% block content %}
         {% endblock %}
-    </div>
+
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="{{ STATIC_URL }}discussion/styles/discussion.css">
+    <script type="text/javascript" src="{{ STATIC_URL }}scripts/plugins/jquery.form.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}scripts/plugins/jquery.autogrow.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}scripts/plugins/jquery.placeholder.js"></script>
+    <script src="{{ STATIC_URL }}discussion/scripts/discussion.js"></script>
+
+        {% block extra_style %}
+        {% endblock %}
+
+        {% block extra_script %}
+        {% endblock %}
+
 </body>
 </html>
