--- a/common/templates/index.html
+++ b/common/templates/index.html
@@ -1,34 +1,6 @@
-<html>
-  <link rel="shortcut icon" href="{{ STATIC_URL }}favicon.ico">
+{% extends 'base.html' %}
 
-  <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css?v=2">
+{% block content %}
+Index page.
 
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-    <script src="http://cdn.jquerytools.org/1.2.5/form/jquery.tools.min.js"></script>
-    <script src="{{ STATIC_URL }}js/mylibs/modal.js"></script>
-    <script type=text/javascript src="{{ STATIC_URL }}socket.io-client/dist/socket.io.min.js"></script>
-
-    {% block extrahead %}
-    {% endblock %}
-
-</head>
-<body class="{% block bodyclass %}{% endblock %}">
-    {% block content %}
-    {% endblock %}
-
-    {% block extra_style %}
-    {% endblock %}
-
-    {% block extra_script %}
-    {% endblock %}
-
-    <link rel="stylesheet" href="{{ STATIC_URL }}discussion/styles/discussion.css">
-    <script type="text/javascript" src="{{ STATIC_URL }}scripts/plugins/jquery.form.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}scripts/plugins/jquery.autogrow.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}scripts/plugins/jquery.placeholder.js"></script>
-    <script src="{{ STATIC_URL }}discussion/scripts/discussion.js"></script>
-
-</body>
-</html>
+{% endblock %}
