--- a/common/static/css/base.css
+++ b/common/static/css/base.css
@@ -1,3 +1,10 @@
+
 body {
     padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+}
+
+.post {
+    background: red;
 }
