--- a/common/templates/base.html
+++ b/common/templates/base.html
@@ -4,37 +4,47 @@
     <title>AISEC</title>
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/bootstrap.css"/>
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/bootstrap-responsive.css"/>
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/base.css"/>
 
-    {#    <script src="{{ STATIC_URL }}login.js"></script>#}
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
+
     {% block extrahead %}
     {% endblock %}
 </head>
 
 <body>
-    <div class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-            <div class="container">
-                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </a>
-                <a class="brand" href="#">AISEC</a>
-                <div class="nav-collapse collapse">
-                    <ul class="nav">
-                        <li class="active"><a href="{% url discussion_index %}">Discussions</a></li>
-                        <li><a href="#about">Users</a></li>
-                    </ul>
-                </div><!--/.nav-collapse -->
+<div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+        <div class="container">
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+            <a class="brand" href="#">AISEC</a>
+
+            <div class="nav-collapse collapse">
+                <ul class="nav">
+                    <li class="active"><a href="{% url discussion_index %}">Home</a></li>
+                    <li><a href="{% url discussion_index %}">Discussions</a></li>
+                    <li><a href="#about">Users</a></li>
+                </ul>
+
+                <form action="{% url discussion_search %}" method="POST" class="forum-search-form navbar-search pull-left">
+                    {% csrf_token %}
+                    {{ search_form.search }}
+                </form>
+
             </div>
+            <!--/.nav-collapse -->
         </div>
     </div>
+</div>
 
-    <div class="container">
+<div class="container">
 
-        {% block content %}
-        {% endblock %}
+    {% block content %}
+    {% endblock %}
 
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
@@ -46,11 +56,13 @@
     <script type="text/javascript" src="{{ STATIC_URL }}scripts/plugins/jquery.placeholder.js"></script>
     <script src="{{ STATIC_URL }}discussion/scripts/discussion.js"></script>
 
-        {% block extra_style %}
-        {% endblock %}
+    {% block extra_style %}
+    {% endblock %}
 
-        {% block extra_script %}
-        {% endblock %}
+    {% block extra_script %}
+    {% endblock %}
+
+</div>
 
 </body>
 </html>
