--- a/discussion/templates/discussion/discussion_list.html
+++ b/discussion/templates/discussion/discussion_list.html
@@ -1,5 +1,7 @@
 {% extends "discussion/base.html" %}
 
+{% block selected_menu %}discussion{% endblock %}
+
 {% block forum_content %}
     <div class="forum-search">
         <h2>Search</h2>
