--- a/discussion/templates/discussion/base.html
+++ b/discussion/templates/discussion/base.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block bodyclass %}{{ block.super }} discussion{% endblock %}
+{% block bodyclass %}discussion{% endblock %}
 
 {% block content %}
   <div id="forum-content">
