--- a/common/templates/index.html
+++ b/common/templates/index.html
@@ -1,21 +1,6 @@
-<html>
-  <link rel="shortcut icon" href="{{ STATIC_URL }}favicon.ico">
+{% extends 'base.html' %}
 
-  <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css?v=2">
+{% block content %}
+    Index page.
 
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-    <script src="http://cdn.jquerytools.org/1.2.5/form/jquery.tools.min.js"></script>
-    <script src="{{ STATIC_URL }}js/mylibs/modal.js"></script>
-
-
-    {% block extrahead %}
-    {% endblock %}
-
-</head>
-<body>
-    {% block content %}
-    {% endblock %}
-<body>
-</html>
+{% endblock %}ı
