--- a/discussion/templates/discussion/_post_form_fields.html
+++ b/discussion/templates/discussion/_post_form_fields.html
@@ -9,4 +9,4 @@
   {{ form.attachment }}
   {{ form.attachment.errors }}
 </div>
-<span class="button"><input type="submit" value="Post"></span>
+<span class="button"><input class="btn" type="submit" value="Post"></span>
