--- a/discussion/templates/discussion/comment_form.html
+++ b/discussion/templates/discussion/comment_form.html
@@ -11,5 +11,5 @@
       {{ form.attachment }}
       {{ form.attachment.errors }}
     </div>
-    <span class="button"><input type="submit" value="Comment"></span>
+    <span class="button"><input class="btn" type="submit" value="Comment"></span>
 </form>
