--- a/common/templates/base.html
+++ b/common/templates/base.html
@@ -21,7 +21,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="brand" href="#">KOMMKAT</a>
+            <a class="brand" href="{% url home %}">KOMMKAT</a>
 
             <div class="nav-collapse collapse">
                 <ul class="nav">
