--- a/discussion/templates/discussion/_post_form_fields.html
+++ b/discussion/templates/discussion/_post_form_fields.html
@@ -9,4 +9,8 @@
   {{ form.attachment }}
   {{ form.attachment.errors }}
 </div>
+<div id="tags"></div>
+{{ tag_search.media.css }}
+{{ tag_search.media.js }}
+{{ tag_search.as_p }}
 <span class="button"><input type="submit" value="Post"></span>
