--- a/common/templates/base.html
+++ b/common/templates/base.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/bootstrap.css"/>
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/bootstrap-responsive.css"/>
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/base.css"/>
-
+    {% load selectable_tags %}
+    {% include_jquery_libs %}
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
 
     {% block extrahead %}
