--- a/common/templates/index.html
+++ b/common/templates/index.html
@@ -3,15 +3,19 @@
 
   <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css?v=2">
 
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/jquery-ui.min.js"></script>
+  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/themes/ui-lightness/jquery-ui.css" type="text/css" media="screen" />
+  <script src="http://cdn.jquerytools.org/1.2.5/form/jquery.tools.min.js"></script>
+  <script src="{{ STATIC_URL }}js/mylibs/modal.js"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-    <script src="http://cdn.jquerytools.org/1.2.5/form/jquery.tools.min.js"></script>
-    <script src="{{ STATIC_URL }}js/mylibs/modal.js"></script>
+  {% load selectable_tags %}
+  {% include_jquery_libs %}
+  <link href="/static/selectable/css/dj.selectable.css" type="text/css" media="all" rel="stylesheet">
+  <script type="text/javascript" src="/static/selectable/js/jquery.dj.selectable.js"></script>
 
-
-    {% block extrahead %}
-    {% endblock %}
+  {% block extrahead %}
+  {% endblock %}
 
 </head>
 <body>
