--- a/discussion/templates/discussion/_post_form_fields.html
+++ b/discussion/templates/discussion/_post_form_fields.html
@@ -10,7 +10,9 @@
   {{ form.attachment.errors }}
 </div>
 <div id="tags"></div>
+<input type="hidden" name="tags" id="hidden_tags">
 {{ tag_search.media.css }}
 {{ tag_search.media.js }}
+<script type="text/javascript" src="{{ STATIC_URL }}js/insert.js"></script>
 {{ tag_search.as_p }}
 <span class="button"><input type="submit" value="Post"></span>
